# C2dSmallSize

./: README.md
Creator/: Create.java  MANIFEST.MF  auto_create  auto_create.bat  command.txt
Template/: CMakeLists.txt  Template.ccs  Template.cfg  Template.udf  local.properties
Template/Classes/: AppDelegate.cpp  HelloWorldScene.cpp
Template/Classes/CFB/: ConfigManager.cpp  ConfigManager.h
Template/Classes/Data/: StringData.h
Template/Classes/Pay/: GamePay.cpp  GamePay.h
Template/app/: CMakeLists.txt  build.gradle
Template/app/src/main/: AndroidManifest.xml
Template/app/src/main/cpp/: GamePayNative.cpp
Template/app/src/main/java/abc/abc/abc/: GamePay.java  HidePay.java  MyApplication.java  PayInterface.java  SuccessPay.java
Template/app/src/main/java/com/egeg/aaa/: MainActivity.java
Template/app/src/main/res/values/: strings.xml
Template/libcocos2dx/: build.gradle
Template/libcocos2dx/src/main/java/org/cocos2dx/lib/: Cocos2dxActivity.java  Cocos2dxGLSurfaceView.java  Cocos2dxHelper.java  Cocos2dxMusic.java  Cocos2dxSound.java
Template/proj.win32/: Template.sln  Template.vcxproj  Template.vcxproj.filters
cocos2d/: CMakeLists.txt  Config.cmake
cocos2d/cocos/: CMakeLists.txt  cocos2d.h
cocos2d/cocos/2d/: CCCamera.cpp  CCCamera.h  CCCameraBackgroundBrush.h  CMakeLists.txt  libcocos2d.vcxproj  libcocos2d.vcxproj.filters
cocos2d/cocos/audio/: CMakeLists.txt
cocos2d/cocos/base/: CCConfiguration.cpp  CCConfiguration.h  CCConsole.cpp  CMakeLists.txt  ccConfig.h
cocos2d/cocos/editor-support/cocostudio/: CCBatchNode.cpp  CCBatchNode.h  CCUtilMath.h  CMakeLists.txt  CSLoader.cpp  CSLoader.h  CocoLoader.cpp  CocoLoader.h  CocoStudio.cpp  CocoStudio.h  FlatBuffersSerialize.cpp  LocalizationManager.cpp  LocalizationManager.h
cocos2d/cocos/editor-support/cocostudio/WidgetReader/: WidgetReader.cpp  WidgetReader.h  WidgetReaderProtocol.h
cocos2d/cocos/editor-support/cocostudio/WidgetReader/ButtonReader/: ButtonReader.cpp  ButtonReader.h
cocos2d/cocos/editor-support/cocostudio/WidgetReader/CheckBoxReader/: CheckBoxReader.cpp  CheckBoxReader.h
cocos2d/cocos/editor-support/cocostudio/WidgetReader/ImageViewReader/: ImageViewReader.cpp  ImageViewReader.h
cocos2d/cocos/editor-support/cocostudio/WidgetReader/LayoutReader/: LayoutReader.cpp  LayoutReader.h
cocos2d/cocos/editor-support/cocostudio/WidgetReader/ListViewReader/: ListViewReader.cpp  ListViewReader.h
cocos2d/cocos/editor-support/cocostudio/WidgetReader/LoadingBarReader/: LoadingBarReader.cpp  LoadingBarReader.h
cocos2d/cocos/editor-support/cocostudio/WidgetReader/NodeReader/: NodeReader.cpp
cocos2d/cocos/editor-support/cocostudio/WidgetReader/PageViewReader/: PageViewReader.cpp  PageViewReader.h
cocos2d/cocos/editor-support/cocostudio/WidgetReader/ScrollViewReader/: ScrollViewReader.cpp  ScrollViewReader.h
cocos2d/cocos/editor-support/cocostudio/WidgetReader/SingleNodeReader/: SingleNodeReader.cpp
cocos2d/cocos/editor-support/cocostudio/WidgetReader/SliderReader/: SliderReader.cpp  SliderReader.h
cocos2d/cocos/editor-support/cocostudio/WidgetReader/TabControlReader/: TabControlReader.cpp
cocos2d/cocos/editor-support/cocostudio/WidgetReader/TextAtlasReader/: TextAtlasReader.cpp  TextAtlasReader.h
cocos2d/cocos/editor-support/cocostudio/WidgetReader/TextBMFontReader/: TextBMFontReader.cpp  TextBMFontReader.h
cocos2d/cocos/editor-support/cocostudio/WidgetReader/TextFieldReader/: TextFieldReader.cpp  TextFieldReader.h
cocos2d/cocos/editor-support/cocostudio/WidgetReader/TextReader/: TextReader.cpp  TextReader.h
cocos2d/cocos/platform/: CCGLView.cpp  CCGLView.h  CCPlatformConfig.h  CMakeLists.txt
cocos2d/cocos/platform/android/: javaactivity-android.cpp
cocos2d/cocos/platform/android/jni/: Java_org_cocos2dx_lib_Cocos2dxHelper.cpp
cocos2d/cocos/platform/win32/: CCPlatformDefine-win32.h
cocos2d/cocos/renderer/: CCVertexAttribBinding.cpp  CCVertexAttribBinding.h
cocos2d/extensions/: CMakeLists.txt  cocos-ext.h
cocos2d/extensions/GUI/CCScrollView/: CCScrollView.cpp
